--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "djangorestframework>=3.15.2",
     "djangorestframework-simplejwt>=5.4.0",
     "drf-spectacular>=0.28.0",
+    "pillow>=11.1.0",
     "python-dotenv>=1.0.1",
 ]
 
