--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "django>=5.1.6",
     "django-cors-headers>=4.7.0",
     "django-phonenumber-field[phonenumberslite]>=8.0.0",
+    "django-redis>=5.4.0",
     "djangorestframework>=3.15.2",
     "djangorestframework-simplejwt>=5.4.0",
     "drf-spectacular>=0.28.0",
