--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "django>=5.1.6",
     "django-cors-headers>=4.7.0",
+    "django-filter>=25.1",
     "django-phonenumber-field[phonenumberslite]>=8.0.0",
     "django-redis>=5.4.0",
     "djangorestframework>=3.15.2",
