--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,11 +2,11 @@ services:
   backend:
     build:
       context: .
-      dockerfile: backend/Dockerfile  # Путь до Dockerfile
+      dockerfile: backend/Dockerfile
     env_file:
       - .env
     volumes:
-      - ./backend:/backend  # монтируем только исходный код
+      - ./backend:/backend
       - ./pyproject.toml:/pyproject.toml
       - ./uv.lock:/uv.lock
     environment:
@@ -22,6 +22,15 @@ services:
       - "6379:6379"
     volumes:
       - redis_data:/data
+  frontend:
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+    ports:
+      - "5173:5173"
+    volumes:
+      - ./frontend:/app
+      - /app/node_modules
 
 volumes:
   redis_data:
