--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "celery>=5.5.1",
     "django>=5.1.6",
     "django-cors-headers>=4.7.0",
     "django-filter>=25.1",
