--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -52,6 +52,17 @@ services:
     volumes:
       - ./frontend:/app
       - /app/node_modules
-
+  db:
+    image: postgres:latest
+    restart: always
+    volumes:
+      - postgres_data:/var/lib/postgresql/data/
+    environment:
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+    ports:
+      - "5432:5432"
 volumes:
   redis_data:
+  postgres_data:
