--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
       - "8000:8000"
     depends_on:
       - redis
-    command: ["uv", "run", "manage.py", "runserver", "0.0.0.0:8000"]
+    command: [ "uv", "run", "manage.py", "runserver", "0.0.0.0:8000" ]
     networks:
       - dev
 
@@ -27,7 +27,7 @@ services:
     build:
       context: .
       dockerfile: backend/Dockerfile
-    command: ["uv", "run", "celery", "-A", "core", "worker", "--loglevel=info"]
+    command: [ "uv", "run", "celery", "-A", "core", "worker", "--loglevel=info" ]
     env_file:
       - .env
     volumes:
@@ -42,6 +42,7 @@ services:
       - redis
     networks:
       - dev
+
   redis:
     image: redis:alpine
     ports:
@@ -50,16 +51,18 @@ services:
       - redis_data:/data
     networks:
       - dev
-  frontend:
-    build:
-      context: ./frontend
-      dockerfile: Dockerfile
+
+  nginx:
+    image: nginx:stable-alpine
     ports:
-      - "5173:5173"
+      - "80:80"
     volumes:
-      - ./frontend:/app
-      - /app/node_modules
+      - ./frontend/dist:/usr/share/nginx/html
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
+    depends_on:
+      - backend
     networks:
       - dev
+
 volumes:
   redis_data:
