--- a/nginx.conf
+++ b/nginx.conf
@@ -1,23 +1,17 @@
-user root;
-
-worker_processes 1;
-
-events {}
-
-http {
-  include       mime.types;
-  default_type  application/octet-stream;
-
-  server {
+server {
     listen 80;
     server_name localhost;
 
     location / {
-      proxy_pass http://frontend:3000/;
+        root /usr/share/nginx/html;
+        index index.html;
+        try_files $uri $uri/ /index.html;  # Важная настройка
     }
 
     location /api/ {
-      proxy_pass http://backend:8000/;
+        proxy_pass http://backend:8000;  # имя сервиса в docker-compose
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
-  }
 }
