--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 networks:
   dev:
 
+
 services:
   backend:
     build:
@@ -19,7 +20,10 @@ services:
       - "8000:8000"
     depends_on:
       - redis
-    command: [ "uv", "run", "manage.py", "runserver", "0.0.0.0:8000" ]
+      - db
+    command: >
+      sh -c "uv run manage.py migrate && uv run manage.py runserver 0.0.0.0:8000"
+
     networks:
       - dev
 
@@ -27,7 +31,7 @@ services:
     build:
       context: .
       dockerfile: backend/Dockerfile
-    command: [ "uv", "run", "celery", "-A", "core", "worker", "--loglevel=info" ]
+    command: ["uv", "run", "celery", "-A", "core", "worker", "--loglevel=info"]
     env_file:
       - .env
     volumes:
@@ -40,6 +44,24 @@ services:
     depends_on:
       - backend
       - redis
+      - db
+    networks:
+      - dev
+
+
+  db:
+    image: postgres:latest
+    restart: always
+    env_file:
+      - .env
+    environment:
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    ports:
+      - "5432:5432"
     networks:
       - dev
 
