--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "djangorestframework-simplejwt>=5.4.0",
     "drf-spectacular>=0.28.0",
     "pillow>=11.1.0",
+    "psycopg[binary]>=3.2.8",
     "python-dotenv>=1.0.1",
 ]
 
